--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "ethers": "^6.13.1",
     "hardhat": "^2.22.6"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
