--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "ethers": "^6.13.1",
-    "hardhat": "^2.22.6",
     "npm-force-resolutions": "^0.0.3"
   },
   "resolutions": {
     "ethers": "6.13.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.6"
   }
 }
