--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
   "name": "coffee-defi-dapp",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npx npm-force-resolutions"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "devDependencies": {
+    "hardhat": "^2.22.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "ethers": "^6.13.1",
-    "npm-force-resolutions": "^0.0.3"
+    "ethers": "^6.13.1"
   },
   "resolutions": {
-    "ethers": "6.13.1"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.22.6"
+    "ethers": "^6.13.1"
   }
 }
